# goldfish

./: README.md
actor/: Cargo.toml  Dockerfile  build.rs
actor/src/: actor_state.rs  main.rs
event-bus/: Cargo.toml  build.rs
event-bus/src/: event_bus.rs  main.rs
event-function-subscriber/: .gitignore  Cargo.toml  build.rs
event-function-subscriber/src/: main.rs
event-reception/: Cargo.toml  build.rs
event-reception-http/: Cargo.toml
event-reception-http/src/: main.rs
event-reception/src/: main.rs
event-workflow-subscriber/: Cargo.toml  build.rs
event-workflow-subscriber/src/: main.rs
proto/: .gitignore  actor_service.proto  event_bus_service.proto  event_reception_service.proto  event_subscriber.proto  wasm_actor.proto
