[package]
name = "actor"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "actor"
path = "src/main.rs"

[dependencies]
async-std = "1.12.0"
wasmedge-sdk = { version = "0.11.2", features = ["standalone"] }
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
async-trait = "0.1.74"
[build-dependencies]
tonic-build = "0.10.2"
prost-build = "0.12.1"

[profile.release]
lto = true
codegen-units = 1
