[package]
name = "event-function-subscriber"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "event-function-subscriber"
path = "src/main.rs"

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
rand = "0.8.5"
shiplift = "0.7"
[build-dependencies]
tonic-build = "0.10.2"
prost-build = { version = "0.12.1", features = [] }

[profile.release]
lto = true
codegen-units = 1
