[package]
name = "event-reception-http"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
axum = { version = "0.7.4", features = ["macros"] }

[build-dependencies]
tonic-build = "0.10.2"
prost-build = { version = "0.12.1", features = [] }
[profile.release]
lto = true
codegen-units = 1
